--- a/ICOProject/src/app/app.component.html
+++ b/ICOProject/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--The content below is only a placeholder and can be replaced.-->
 <div class="row" style="text-align:center">
   <div class="col-md-12">
     <form role="form">
